--- a/crypto/bio/Makefile
+++ b/crypto/bio/Makefile
@@ -77,7 +77,7 @@ dclean_crypto_bio:
 
 clean: clean_crypto_bio
 clean_crypto_bio:
-	rm -f crypto/bio/*.o crypto/bio/*.d crypto/bio/*.obj crypto/bio/lib tags crypto/bio/core crypto/bio/.pure crypto/bio/.nfs* crypto/bio/*.old crypto/bio/*.bak crypto/bio/fluff
+	rm -f crypto/bio/*.o crypto/bio/*.d crypto/bio/*.obj crypto/bio/lib crypto/bio/tags crypto/bio/core crypto/bio/.pure crypto/bio/.nfs* crypto/bio/*.old crypto/bio/*.bak crypto/bio/fluff
 
 .c.o:
 	$(CC) $(CFLAGS_crypto_bio) $(CPPFLAGS) -c -o $@ $<
