--- a/crypto/bio/Makefile
+++ b/crypto/bio/Makefile
@@ -4,6 +4,7 @@
 
 DIR=	bio
 TOP=	../..
+include $(TOP)/configure.mk
 CC=	cc
 INCLUDES= -I.. -I$(TOP) -I../../include
 CFLAG=-g
@@ -84,6 +85,7 @@ dclean:
 clean:
 	rm -f *.o *.d *.obj lib tags core .pure .nfs* *.old *.bak fluff
 
+-include $(SRC:.c=.d)
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
 b_dump.o: ../../e_os.h ../../include/openssl/bio.h
