--- a/crypto/bio/Makefile
+++ b/crypto/bio/Makefile
@@ -2,26 +2,26 @@
 # OpenSSL/crypto/bio/Makefile
 #
 
-DIR=	bio
-TOP=	../..
-include $(TOP)/configure.mk
-INCLUDES= -I.. -I$(TOP) -I../../include
+DIR_crypto_bio=	bio
+TOP_crypto_bio=	../..
+include $(TOP_crypto_bio)/configure.mk
+INCLUDES_crypto_bio= -I.. -I$(TOP_crypto_bio) -I../../include
 
-CFLAGS= $(INCLUDES) $(CFLAG)
+CFLAGS_crypto_bio= $(INCLUDES_crypto_bio) $(CFLAG)
 
-GENERAL=Makefile
-TEST=
-APPS=
+GENERAL_crypto_bio=Makefile
+TEST_crypto_bio=
+APPS_crypto_bio=
 
-LIB=$(TOP)/libcrypto.a
-LIBSRC= bio_lib.c bio_cb.c bio_err.c \
+LIB_crypto_bio=$(TOP_crypto_bio)/libcrypto.a
+LIBSRC_crypto_bio= bio_lib.c bio_cb.c bio_err.c \
 	bss_mem.c bss_null.c bss_fd.c \
 	bss_file.c bss_sock.c bss_conn.c \
 	bf_null.c bf_buff.c b_print.c b_dump.c \
 	b_sock.c bss_acpt.c bf_nbio.c bss_log.c bss_bio.c \
 	bss_dgram.c
 #	bf_lbuf.c
-LIBOBJ= bio_lib.o bio_cb.o bio_err.o \
+LIBOBJ_crypto_bio= bio_lib.o bio_cb.o bio_err.o \
 	bss_mem.o bss_null.o bss_fd.o \
 	bss_file.o bss_sock.o bss_conn.o \
 	bf_null.o bf_buff.o b_print.o b_dump.o \
@@ -29,39 +29,39 @@ LIBOBJ= bio_lib.o bio_cb.o bio_err.o \
 	bss_dgram.o
 #	bf_lbuf.o
 
-SRC= $(LIBSRC)
+SRC_crypto_bio= $(LIBSRC_crypto_bio)
 
-EXHEADER= bio.h
-HEADER=	bio_lcl.h $(EXHEADER)
+EXHEADER_crypto_bio= bio.h
+HEADER_crypto_bio=	bio_lcl.h $(EXHEADER_crypto_bio)
 
-ALL=    $(GENERAL) $(SRC) $(HEADER)
+ALL_crypto_bio=    $(GENERAL_crypto_bio) $(SRC_crypto_bio) $(HEADER_crypto_bio)
 
 top: top_crypto_bio
 top_crypto_bio:
-	(cd ../..; $(MAKE) DIRS=crypto SDIRS=$(DIR) sub_all)
+	(cd ../..; $(MAKE) DIRS=crypto SDIRS=$(DIR_crypto_bio) sub_all)
 
 all: all_crypto_bio
 all_crypto_bio:	lib
 
-lib:	$(LIBOBJ)
-	$(ARX) $(LIB) $(LIBOBJ)
-	$(RANLIB) $(LIB) || echo Never mind.
+lib:	$(LIBOBJ_crypto_bio)
+	$(ARX) $(LIB_crypto_bio) $(LIBOBJ_crypto_bio)
+	$(RANLIB) $(LIB_crypto_bio) || echo Never mind.
 	@touch lib
 
 files: files_crypto_bio
 files_crypto_bio:
-	$(PERL) $(TOP)/util/files.pl TOP=$(TOP) Makefile >> $(TOP)/MINFO
+	$(PERL) $(TOP_crypto_bio)/util/files.pl TOP=$(TOP_crypto_bio) Makefile >> $(TOP_crypto_bio)/MINFO
 
 links: links_crypto_bio
 links_crypto_bio:
-	@$(PERL) $(TOP)/util/mklink.pl ../../include/openssl $(EXHEADER)
-	@$(PERL) $(TOP)/util/mklink.pl ../../test $(TEST)
-	@$(PERL) $(TOP)/util/mklink.pl ../../apps $(APPS)
+	@$(PERL) $(TOP_crypto_bio)/util/mklink.pl ../../include/openssl $(EXHEADER_crypto_bio)
+	@$(PERL) $(TOP_crypto_bio)/util/mklink.pl ../../test $(TEST_crypto_bio)
+	@$(PERL) $(TOP_crypto_bio)/util/mklink.pl ../../apps $(APPS_crypto_bio)
 
 install: install_crypto_bio
 install_crypto_bio:
 	@[ -n "$(INSTALLTOP)" ] # should be set by top Makefile...
-	@headerlist="$(EXHEADER)"; for i in $$headerlist; \
+	@headerlist="$(EXHEADER_crypto_bio)"; for i in $$headerlist; \
 	do  \
 	(cp $$i $(INSTALL_PREFIX)$(INSTALLTOP)/include/openssl/$$i; \
 	chmod 644 $(INSTALL_PREFIX)$(INSTALLTOP)/include/openssl/$$i ); \
@@ -69,14 +69,14 @@ install_crypto_bio:
 
 tags: tags_crypto_bio
 tags_crypto_bio:
-	ctags $(SRC)
+	ctags $(SRC_crypto_bio)
 
 tests: tests_crypto_bio
 tests_crypto_bio:
 
 lint: lint_crypto_bio
 lint_crypto_bio:
-	lint -DLINT $(INCLUDES) $(SRC)>fluff
+	lint -DLINT $(INCLUDES_crypto_bio) $(SRC_crypto_bio)>fluff
 
 dclean: dclean_crypto_bio
 dclean_crypto_bio:
@@ -85,4 +85,7 @@ clean: clean_crypto_bio
 clean_crypto_bio:
 	rm -f *.o *.d *.obj lib tags core .pure .nfs* *.old *.bak fluff
 
--include $(SRC:.c=.d)
+-include $(SRC_crypto_bio:.c=.d)
+
+.c.o:
+	$(CC) $(CFLAGS_crypto_bio) $(CPPFLAGS) -c -o $@ $<
